--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@ header p {
         <!-- Footer -->
         <div class="footer" id="footer">
             <p><strong>جميع الحقوق محفوظة - متجر عروق الذهب للمنتجات الرقمية</strong></p>
-            <p>©GoldenVeinsHQ 2025 - الإصدار النهائي 2.1</p>
+            <p>©GoldenVeinsHQ 2025 - الإصدار 2.1</p>
             <p>للتواصل: <a href="https://goldenveinshq.carrd.co/" target="_blank">goldenveinshq.carrd.co</a></p>
         </div>
     </div>
