--- a/index.html
+++ b/index.html
@@ -1204,7 +1204,7 @@ header p {
                 <div class="form-row">
                     <div class="input-group">
                         <label for="fromSchool">اسم المدرسة المنقول منها:</label>
-                        <input type="text" id="fromSchool" placeholder="مثال: مدرسة النور الابتدائية">
+                        <input type="text" id="fromSchool" placeholder="مثال: مدرسة النور [ بدون كتابة المرحلة ]">
                     </div>
                     <div class="input-group">
                         <label for="educationLevel">المرحلة التعليمية:</label>
